# waldur-cli-generator

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  commands.toml
src/: codegen.rs  extract.rs  main.rs  manifest.rs  schema.rs  schema_codegen.rs
